 * Support bitmap audio channel reordering in MP4/mov
 * Support AlbumArtist and DiscNumber metadata
 * Fixed program selection with recorded TS (TopField, DreamBox and others)
 * Fixed TS playback with PAT/PMT less recordings
 * Support for lame's replaygain extension in mpeg files
 * Fixes for DTS detection in WAV and MKV files
 * Basic support for MPEG4-SL in TS and T-DMB

Stream filter:
 * Added ARIB STD-B25 TS streams decoder

Audio output:
 * Complete rewrite of the AudioTrack Android module. This is now the default.
   It now supports HDMI/SPDIF passthrough for AC3, 5.1/7.1 and float output.

Video ouput:
 * Linux/BSD default video output is now OpenGL, instead of Xvideo
 * Wayland shell surface window provider
 * Wayland shared memory video output
 * Large rework of the Android video outputs: there is now Surface (2.1, 2.2)
   NativeWindow (2.3+, supports hw rotation, subpicture blending, opaque)
 * Support rotation in Android NativeWindow output and hardware decoders
 * Renamed the Direct3D output module to Direct3D9
 * Added Direct3D11 video mode supporting both Windows desktop and WinRT modes.

Video filter:
 * Hardware deinterlacing on the rPI, using MMAL
 * New video filter to convert between fps rates

Stream Output:
 * Chromecast output module
 * RGB24 and YCbCr 4:2:0 RTP packetization

Encoder:
 * Support for Daala video in 4:2:0 and 4:4:4

Muxers:
 * Added fragmented/streamable MP4 muxer
 * Opus in MPEG Transport Stream
 * Daala in Ogg

Service Discovery:
 * New NetBios service discovery using libdsm
 * Rewrite of the UPnP service discovery

Mac OS X Interface
 * new AppleScript API giving access to audio desynchronization
 * Port to Yosemite X.10

Qt interface:
 * Batch convert support

Skins2:
 * Support key accelerators

libVLC:
 * Add libvlc_media_new_callbacks for custom input byte streams
 * Add libvlc_audio_output_device_enum to enumerate devices of current aout